# ai-safety-fakenews

./: README.md  pyproject.toml  requirements.txt
data/: README.md
deep-learning/: README.md  welfake-glove.ipynb  welfake_bert.ipynb
machine-learning/: README.md  welfake-ml.ipynb
