[project]
name = "coherenteyes"
version = "1.0.0"
description = "AI Safety–Aligned Fake News Detection (ML + DL + SHAP)"
readme = "README.md"
requires-python = ">=3.10"

# Core dependencies
dependencies = [
    "numpy>=1.23",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "tensorflow>=2.15",
    "torch>=2.2",
    "transformers>=4.40",
    "shap>=0.44",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "jupyter>=1.0"
]

# Optional: Dev dependencies (testing + linting + formatting)
[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
    "ipykernel",
    "nbqa"
]

# Optional: Documentation dependencies (if using mkdocs or sphinx)
docs = [
    "mkdocs",
    "mkdocs-material"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
